crate/sinex-primitives/tests/source_contract_compile_fail/missing_build_impact.stderr
error[E0599]: no method named `build` found for struct `SourceRuntimeBindingBuilder<HasOutput, HasPrivacy, HasCheckpointFamily, HasRuntimeShape, MissingBuildImpact>` in the current scope
  --> tests/source_contract_compile_fail/missing_build_impact.rs:18:6
   |
 8 |       let _ = SourceRuntimeBinding::builder(
   |  _____________-
 9 | |         subject_ref!("runtime_unit:test.missing_build_impact"),
10 | |         "test.missing_build_impact",
11 | |         "test",
...  |
17 | |     .runtime_shape(RuntimeShape::Continuous)
18 | |     .build();
   | |     -^^^^^ method not found in `SourceRuntimeBindingBuilder<HasOutput, HasPrivacy, HasCheckpointFamily, HasRuntimeShape, MissingBuildImpact>`
   | |_____|
   |
   |
   = note: the method was found for `SourceRuntimeBindingBuilder<HasOutput, HasPrivacy, HasCheckpointFamily, HasRuntimeShape, HasBuildImpact>`
